--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity
             android:name=".View.TrangChu.TrangChuActivity"
+            android:label="Đăng nhập/Đăng ký"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
     </application>
