--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
