--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
