--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".View.DanhGia.DanhSachDanhGiaActivity"></activity>
         <activity
             android:name=".View.DanhGia.ThemDanhGiaActivity"
-            android:theme="@style/Base.Theme.AppCompat.Dialog"
-            >
-
-        </activity>
+            android:theme="@style/Base.Theme.AppCompat.Dialog"></activity>
         <activity android:name=".View.ChiTietSanPham.ChiTietSanPhamActivity" />
         <activity android:name=".View.HienThiSanPhamTheoDanhMuc.HienThiSanPhamTheoDanhMucActivity" />
 
