--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.GioHang.GioHangActivity"
-            android:label="Giỏ Hàng"
-            ></activity>
+        <activity
+            android:name=".View.ThanhToan.ThanhToanActivity"
+            android:label="Thanh Toán"></activity>
+        <activity
+            android:name=".View.GioHang.GioHangActivity"
+            android:label="Giỏ Hàng" />
         <activity android:name=".View.DanhGia.DanhSachDanhGiaActivity" />
         <activity
             android:name=".View.DanhGia.ThemDanhGiaActivity"
