--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'androidx.core:core:1.3.0-rc01'
+    implementation 'androidx.core:core:1.1.0'
 
 }
