tìm kiếm sản phẩm theo tên

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".View.TimKiem.TimKiemActivity"></activity>
         <activity
             android:name=".View.ThanhToan.ThanhToanActivity"
-            android:label="Thanh Toán"></activity>
+            android:label="Thanh Toán" />
         <activity
             android:name=".View.GioHang.GioHangActivity"
             android:label="Giỏ Hàng" />
